--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "concoction"
-version = "0.1.3"
+version = "0.1.4"
 description = "Library to inject configurations"
 authors = ["soapun"]
 license = "MIT"
@@ -25,6 +25,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = ">=3.8,<4"
 python-benedict = "^0.33.2"
+bidict = "^0.23.1"
 pydantic = ">2"
 
 
